infra/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: api
                port:
                  number: 8080
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 8080
